 * 'svn rm' requires --force for unversioned and/or modified items
 * 'svn rm' removes files and uncommitted directories from the working
    copy immediately
 * 'svn mv' for WC->WC moves behaves like 'svn rm' with respect to
    the source, it requires --force for unversioned and/or modified items
    and removes files and uncommitted directories from source

 Developer-visible changes:
 * updates can deal with disjoint urls.
 * python tests now run on Win32.
 * svn_cl__diff/svn_client_diff gutted and rewritten
 * NEW internalized diff/diff3 library.  Not yet integrated/tested.

Version 0.11.1 (released 12 April 2002, revision 1682)

 User-visible changes:
 * completion of 'svn merge' (issue 504)
 * added SVNReposName directive to mod_dav_svn
 * insist on a diff binary that supports "-u"
 * fix and unify pop-up $EDITOR behaviors (issues 638, 633, 615)

 Developer-visible changes:
 * finish rewrite of commit system to handle disjoint urls (issue 575)
 * finish proxy support via config files (esp. on win32) (issue 579)
 * fix svn_ra_dav__get_baseline_info and related bugs (issue 581)
 * reorganization of libsvn_wc header files & API
 * new getopt_tests.py to test commandline option processing
 * 'make check' now more portable -- tests invoked via python, not sh
 * miscellaneous bugfixes in imports, svndiff, db linkage.

Version 0.10.2 (released 25 Mar 2002, revision 1587)

 User-visible changes:
 * new ~/.subversion configuration directory
 * proxy support via ~/.subversion/proxies file
          
 Developer-visible changes:
 * rewrite of client-side commit process partially done
 * beginnings of 'svn merge'
 * mod_dav_svn now generates "streamy" report responses
 * stringbuf cleanups and bugfixes
 * interface to svn_wc_entry_t cleaned up
 * tweaks to build system and freebsd port
 * miscellaneous bugfixes in path escaping, pool usage, hp-ux compilation

Version 0.10.1 (released 17 Mar 2002, revision 1537)

 User-visible changes: